# monarch

./: .gitignore  AGENTS.md  CITATIONS.md  CODE-GRAPH.json  CODE-GRAPH.labels.json  CODE-GRAPH.md  README.md  SUBMISSION.md  docker-compose.yml  package-lock.json  package.json
services/inference/: .env.example  Dockerfile  README.md  RUNBOOK-AMD.md  docker-compose.yml  pyproject.toml  requirements.txt
services/inference/app/: __init__.py  config.py  dependencies.py  main.py
services/inference/app/middleware/: __init__.py  api_key.py  input_validation.py  rate_limit.py
services/inference/app/models/: __init__.py  enums.py  schemas.py
services/inference/app/routers/: __init__.py  batch.py  compare.py  report.py  scan.py
services/inference/app/services/: __init__.py  alpha_calibration.py  blob_store.py  gemma_report.py  inference.py  jobs.py  landau.py  naa.py  pooling.py  report_charts.py  report_generator.py  roi.py  stores.py  susceptibility.py
services/inference/app/utils/: __init__.py  checkpoint.py  (+2 more)
services/inference/data/: alpha_hat.json  roi_definitions.json
services/inference/scripts/: batch_naa.py  build_emobank_corpus.py  cache_roi.py  calibrate_alpha.py  export_roi_vertices.py  gen_medial_mask.py  gen_upsample_maps.py  prewarm.py  smoke_test.py
services/inference/tests/: conftest.py  test_app_boot.py  test_auth.py  test_blob_store.py  test_inference.py  test_landau.py  test_naa.py  test_pooling.py  test_rate_limit.py  test_report.py  test_roi.py  test_scan_jobs.py  test_timeseries.py
services/inference/uploads/: tmp_fsrua8a.txt
(+121 files in other folders)
