[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monarch-backend"
version = "0.1.0"
description = "Neural processing scanner backend for Monarch -- TRIBE v2 + NAA + Landau/Ising"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Brian Mwai", email = "brian@mwai.ai" },
]
license = { text = "Proprietary -- TRIBE v2 weights are CC-BY-NC-4.0" }

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
